Moved hero to partial view

--- a/Web/Restaurant.Web/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Web/Restaurant.Web/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -3,12 +3,8 @@
 @{
     ViewData["Title"] = "Forgot password confirmation";
 }
-<div class="container-xxl py-1 bg-dark hero-header mb-5">
-    <div class="container text-center my-5 pt-5 pb-4">
-    </div>
-</div>
+<partial name="_HeroPartial" />
 
-<h1>@ViewData["Title"]</h1>
 <p>
     Please check your email to reset your password.
 </p>
