--- a/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,11 +9,8 @@
     }
 }
 
-<div class="container-xxl py-1 bg-dark hero-header mb-5">
-    <div class="container text-center my-5 pt-5 pb-4">
-        <h6 class="display-3 section-title text-white mb-3 animated slideInDown">Manage</h6>
-    </div>
-</div>
+<partial name="_HeroPartial" />
+
 
 <div>
     <h4>Change your account settings</h4>
