--- a/Web/Restaurant.Web/Views/Home/About.cshtml
+++ b/Web/Restaurant.Web/Views/Home/About.cshtml
@@ -2,11 +2,7 @@
     this.ViewData["Title"] = "About us";
 }
 
-<div class="container-xxl py-1 bg-dark hero-header mb-5">
-    <div class="container text-center my-5 pt-5 pb-4">
-        <p class="display-3 section-title text-white mb-3 animated slideInDown">About us</p>
-    </div>
-</div>
+<partial name="_HeroPartial" />
 
 <div class="container-xxl py-5">
     <div class="container">
@@ -57,6 +53,7 @@
     </div>
 </div>
 <!-- About End -->
+
 <!-- Team Start -->
 <div class="container-xxl pt-5 pb-3">
     <div class="container">
