--- a/Web/Restaurant.Web/Views/Home/Privacy.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Privacy.cshtml
@@ -1,11 +1,9 @@
 @{
     this.ViewData["Title"] = "Privacy Policy";
 }
-<div class="container-xxl py-1 bg-dark hero-header mb-5">
-    <div class="container text-center my-5 pt-5 pb-4">
-        <p class="display-3 section-title text-white mb-3 animated slideInDown">Privacy policy</p>
-    </div>
-</div>
+
+<partial name="_HeroPartial" />
+
 
 <p>Last updated: February 04, 2022</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
