--- a/Web/Restaurant.Web/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/Web/Restaurant.Web/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -3,10 +3,9 @@
 @{
     ViewData["Title"] = "Register";
 }
-<div class="container-xxl py-1 bg-dark hero-header mb-5">
-    <div class="container text-center my-5 pt-5 pb-4">
-    </div>
-</div>
+
+<partial name="_HeroPartial" />
+
 
 <h1>@ViewData["Title"]</h1>
 <h4 id="external-login-title">Associate your @Model.ProviderDisplayName account.</h4>
