--- a/Web/Restaurant.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/Restaurant.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,11 +5,8 @@
     ViewData["Title"] = "Log in";
 }
 
-<div class="container-xxl py-3 bg-dark hero-header mb-5">
-    <div class="container text-center my-5 pt-5 pb-4">
-        <h3 class="display-3 section-title text-white mb-3 animated slideInDown">@ViewData["Title"]</h3>
-    </div>
-</div>
+<partial name="_HeroPartial" />
+
 <div class="row">
     <div class="col-md-4">
         <section>
