--- a/Web/Restaurant.Web/Views/Home/Contact.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Contact.cshtml
@@ -3,11 +3,7 @@
     this.ViewData["Title"] = "Contacts";
 }
 
-<div class="container-xxl py-1 bg-dark hero-header mb-5">
-    <div class="container text-center my-5 pt-5 pb-4">
-        <p class="display-3 section-title text-white mb-3 animated slideInDown">Contacts</p>
-    </div>
-</div>
+<partial name="_HeroPartial" />
 
 <div class="container-xxl py-5">
     <div class="container">
