--- a/Web/Restaurant.Web/Views/Menu/All.cshtml
+++ b/Web/Restaurant.Web/Views/Menu/All.cshtml
@@ -2,16 +2,11 @@
 @using Restaurant.Web.ViewModels.Menu
 @model MenuViewModel
 @{
-    this.ViewData["Title"] = "Menu";
+    this.ViewData["Title"] = "Our Menu";
 }
 
-<div class="container-xxl py-1 bg-dark hero-header mb-5">
-    <div class="container text-center my-5 pt-5 pb-4">
-        <p class="display-3 section-title text-white mb-3 animated slideInDown">Our Menu</p>
-    </div>
-</div>
+<partial name="_HeroPartial" />
 
-<!-- Menu Start -->
 <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -55,7 +50,7 @@
                 <div id="tab-1" class="tab-pane fade show p-0 active">
                     <div class="row g-4">
                         @foreach (var meal in Model.Meals.Where(m => m.Category.Name == "Desserts"))
-                         {
+                        {
                             <div class="col-lg-6">
                                 <div class="d-flex align-items-center">
                                     <img class="flex-shrink-0 img-fluid rounded" src=@meal.ImageUrl alt="" style="width: 80px;" asp-append-version="true">
@@ -68,11 +63,10 @@
                                     </div>
                                 </div>
                             </div>
-                         }
+                        }
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- Menu End -->
