--- a/Web/Restaurant.Web/Views/Reservation/Book.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/Book.cshtml
@@ -6,15 +6,8 @@
     this.ViewData["Title"] = "Reservation";
 }
 
-<div class="container-xxl py-1 bg-dark hero-header mb-5">
-    <div class="container text-center my-5 pt-5 pb-4">
-        <h6 class="display-3 section-title text-white mb-3 animated slideInDown">Reservation</h6>
-    </div>
-</div>
+<partial name="_HeroPartial" />
 
-
-
-<!-- Reservation Start -->
 <div class="container-xxl py-5 px-0 wow fadeInUp" data-wow-delay="0.1s">
     <div class="row g-0">
         <div class="col-md-6">
@@ -118,4 +111,3 @@
         </div>
     </div>
 </div>
-<!-- Reservation End -->
