--- a/Web/Restaurant.Web/Views/Review/All.cshtml
+++ b/Web/Restaurant.Web/Views/Review/All.cshtml
@@ -6,12 +6,7 @@
     this.ViewData["Title"] = "All reviews";
 }
 
-<div class="container-xxl py-1 bg-dark hero-header mb-5">
-    <div class="container text-center my-5 pt-5 pb-4">
-        <p class="display-3 section-title text-white mb-3 animated slideInDown">We leave the customers do the talking.</p>
-
-    </div>
-</div>
+<partial name="_HeroPartial" />
 
 <!-- To do: Improve UI - add bootstrap card class. -->
 
