Improved menu UI.

--- a/Web/Restaurant.Web/Views/Menu/AddMeal.cshtml
+++ b/Web/Restaurant.Web/Views/Menu/AddMeal.cshtml
@@ -39,7 +39,7 @@
             </div>
             <h1></h1>
             <div class="col-12">
-                <button class="btn btn-primary w-100 py-3 p-5" type="submit">Book Now</button>
+                <button class="btn btn-primary w-100 py-3 p-5" type="submit">Add meal</button>
             </div>
         </form>
 </div>
