--- a/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,6 @@
     <!-- Libraries Stylesheet -->
     <link href="~/lib/animate/animate.min.css" rel="stylesheet" asp-append-version="true">
     <link href="~/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" asp-append-version="true">
-    <link href="~/lib/fontawesome/css/all.css" rel="stylesheet" asp-append-version="true"/>
     <!-- Customized Bootstrap Stylesheet -->
     <link href="~/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true">
 
@@ -53,7 +52,7 @@
                     <a class="nav-item nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a>
                     <a class="nav-item nav-link" asp-area="" asp-controller="Menu" asp-action="Index">Menu</a>
                     <a class="nav-item nav-link" asp-area="" asp-controller="Reservation" asp-action="Book">Book a table</a>
-                        <partial name="_LoginPartial" />
+                    <partial name="_LoginPartial" />
                 </div>
                 <a href="" class="btn btn-primary py-2 px-4">Order now</a>
             </div>
@@ -138,6 +137,8 @@
     <script src="~/lib/waypoints/waypoints.min.js" asp-append-version="true"></script>
     <script src="~/lib/counterup/counterup.min.js" asp-append-version="true"></script>
     <script src="~/lib/owlcarousel/owl.carousel.min.js" asp-append-version="true"></script>
+    <script src="https://kit.fontawesome.com/1405e59552.js" asp-append-version="true" crossorigin="anonymous"></script>
+
 
 
     <!-- Template Javascript -->
