--- a/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
+++ b/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
@@ -45,11 +45,11 @@
                             {
                                 <div class="col-lg-6">
                                     <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src=@($"{meal.ImageUrl}") alt="" style="max-width:300px; max-height: 500px; " asp-append-version="true">
+                                        <img class="flex-shrink-0 img-fluid rounded" src=@($"{meal.ImageUrl}") alt="" asp-append-version="true">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                 <span>@meal.Name</span>
-                                                <span class="text-primary">@meal.Price</span>
+                                                <span class="text-primary">@meal.Price €</span>
                                             </h5>
                                             <small class="fst-italic">@meal.Description</small>
                                         </div>
