--- a/Web/Restaurant.Web/Views/Home/Contact.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Contact.cshtml
@@ -14,17 +14,21 @@
         <div class="row g-4">
             <div class="col-12">
                 <div class="row gy-4">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <h5 class="section-title ff-secondary fw-normal text-start text-primary">Booking</h5>
                         <p><i class="fa fa-envelope-open text-primary me-2"></i>book@example.com</p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <h5 class="section-title ff-secondary fw-normal text-start text-primary">General</h5>
                         <p><i class="fa fa-envelope-open text-primary me-2"></i>info@example.com</p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <h5 class="section-title ff-secondary fw-normal text-start text-primary">Technical</h5>
                         <p><i class="fa fa-envelope-open text-primary me-2"></i>tech@example.com</p>
+                    </div>
+                    <div class="col-md-3">
+                        <h5 class="section-title ff-secondary fw-normal text-start text-primary">Front office number</h5>
+                        <p><i class="fa fa-envelope-open text-primary me-2"></i>+359 123 456 789</p>
                     </div>
                 </div>
             </div>
