--- a/Web/Restaurant.Web/Views/Home/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Index.cshtml
@@ -11,12 +11,12 @@
     <div class="container my-5 py-5">
         <div class="row align-items-center g-5">
             <div class="col-lg-6 text-center text-lg-start">
-                <h1 class="display-3 text-white animated slideInLeft">Enjoy Our<br>Delicious Meal</h1>
-                <p class="text-white animated slideInLeft mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                <h1 class="display-3 text-white animated slideInLeft">Hungry?<br>You've come to the right place!</h1>
+                <p class="text-white animated slideInLeft mb-4 pb-2">From juicy burgers to mouth-watering pizza - we've got it all. All made using only the freshest ingredients from local markets.</p>
                 <a class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft" asp-controller="Reservation" asp-action="Book">Book A Table</a>
             </div>
             <div class="col-lg-6 text-center text-lg-end overflow-hidden">
-                <img class="img-fluid" src="~/img/hero.png" asp-append-version="true">
+                <img class="img-fluid" src="~/images/hero.png" asp-append-version="true">
             </div>
         </div>
     </div>
@@ -57,7 +57,7 @@
             <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
                 <div class="service-item rounded pt-3">
                     <div class="p-4">
-                        <i class="fa fa-3x fa-headset text-primary mb-4"></i>
+                        <i class="fa-solid fa-3x fa-hand-holding-dollar text-primary mb-4"></i>
                         <h5>Fast delivery</h5>
                         <p>Moneyback guarantee if you don't receive you order within 30 minutes.</p>
                     </div>
@@ -83,7 +83,7 @@
                     <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                     <p>@review.Description</p>
                     <div class="d-flex align-items-center">
-                        <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" style="width: 50px; height: 50px;">
+                        <img class="img-fluid flex-shrink-0 rounded-circle" src="~/images/testimonial-3.jpg" style="width: 50px; height: 50px;" asp-append-version="true">
                         <div class="ps-3">
                             <h5 class="mb-1">@review.FullName</h5>
 
