--- a/Web/Restaurant.Web/wwwroot/css/style.css
+++ b/Web/Restaurant.Web/wwwroot/css/style.css
@@ -152,7 +152,7 @@
 
 /*** Hero Header ***/
 .hero-header {
-    background: linear-gradient(rgba(15, 23, 43, .9), rgba(15, 23, 43, .9)), url(../img/bg-hero.jpg);
+    background: linear-gradient(rgba(15, 23, 43, .9), rgba(15, 23, 43, .9)), url(../images/bg-hero.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
