--- a/Web/Restaurant.Web/Views/Home/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Index.cshtml
@@ -8,7 +8,9 @@
 
 
 <div class="container-xxl py-5 bg-dark hero-header mb-5">
-    <div class="container my-5 py-5">
+    <div class="container my-5 py-5 pb-4">
+        <partial name="_CookieConsentPartial" />
+
         <div class="row align-items-center g-5">
             <div class="col-lg-6 text-center text-lg-start">
                 <h1 class="display-3 text-white animated slideInLeft">Hungry?<br>You've come to the right place!</h1>
@@ -81,19 +83,17 @@
             {
                 <div class="testimonial-item bg-transparent border rounded p-4">
                     <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                    <p>@review.Description</p>
+                    <p>@review.Summary</p>
                     <div class="d-flex align-items-center">
                         <img class="img-fluid flex-shrink-0 rounded-circle" src="~/images/testimonial-3.jpg" style="width: 50px; height: 50px;" asp-append-version="true">
                         <div class="ps-3">
                             <h5 class="mb-1">@review.FullName</h5>
 
-
-                                @for (int i = 0; i < review.Rating; i++)
-                                {
-                                    <i class="fa fa-star text-primary"></i>
-                                }
-
-
+                            @for (int i = 0; i < review.Rating; i++)
+                            {
+                                <i class="fa fa-star text-primary"></i>
+                            }
+                            <span>@review.Rating/5</span>
                         </div>
                     </div>
                 </div>
