--- a/Web/Restaurant.Web/Views/Review/AddReview.cshtml
+++ b/Web/Restaurant.Web/Views/Review/AddReview.cshtml
@@ -10,24 +10,34 @@
 
 <div class="col-md-12 bg-dark">
     <div class="p-5 wow fadeInUp" data-wow-delay="0.2s">
-        <h1 class="text-white mb-0 text-center">Rate our service!</h1>
 
-        <span class="form-check text-center" ></span>
+        <span class="form-check text-center"></span>
         <form method="post">
-            <span class="offset-md-5 text-white fs-5" asp-validation-for="Rating"></span>
-            <div class="rating mb-5">
-                <input type="radio" name="rating" value="5" id="5"><label for="5" class="fs-1">☆</label>
-                <input type="radio" name="rating" value="4" id="4"><label for="4" class="fs-1">☆</label>
-                <input type="radio" name="rating" value="3" id="3"><label for="3" class="fs-1">☆</label>
-                <input type="radio" name="rating" value="2" id="2"><label for="2" class="fs-1">☆</label>
-                <input type="radio" name="rating" value="1" id="1"><label for="1" class="fs-1">☆</label>
+            <span class="text-white fs-5 offset-md-8" asp-validation-for="Rating"></span>
+            <div class="row g-0">
+                <div class="col-md-6">
+                    <h1 class="text-white mb-0 offset-md-3">Rate our service!</h1>
+                </div>
+                <div class="col-md-6">
+                    <div class="rating mb-5">
+                        <input type="radio" name="rating" value="5" id="5"><label for="5" class="fs-1">☆</label>
+                        <input type="radio" name="rating" value="4" id="4"><label for="4" class="fs-1">☆</label>
+                        <input type="radio" name="rating" value="3" id="3"><label for="3" class="fs-1">☆</label>
+                        <input type="radio" name="rating" value="2" id="2"><label for="2" class="fs-1">☆</label>
+                        <input type="radio" name="rating" value="1" id="1"><label for="1" class="fs-1">☆</label>
+                    </div>
+                </div>
             </div>
-            <div class="form-floating">
-                <textarea class="form-control col-xl-12" asp-for="Description" placeholder="Share your experience, recommendations, etc." style="height: 200px"></textarea>
+            <div class="form-floating mb-3">
+                <input class="form-control col-xl-12" asp-for="Summary" placeholder="Give us a short summary of your experience.">
+                <label asp-for="Summary">Give us a short summary of your experience.</label>
+                <span asp-validation-for="Summary" class="text-white"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <textarea class="form-control col-xl-12" asp-for="Description" placeholder="Share your feedback, recommendations, etc." style="height: 150px"></textarea>
                 <label asp-for="Description">Share your experience, recommendations, etc.</label>
                 <span asp-validation-for="Description" class="text-white"></span>
             </div>
-            <h1></h1>
             <button class="btn btn-primary w-100 py-3 form-lg" type="submit">Submit</button>
         </form>
     </div>
