--- a/Web/Restaurant.Web/Views/Shared/_CookieConsentPartial.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_CookieConsentPartial.cshtml
@@ -1,14 +1,14 @@
 @using Microsoft.AspNetCore.Http.Features
 
 @{
-    var consentFeature = this.Context.Features.Get<ITrackingConsentFeature>();
+    var consentFeature = Context.Features.Get<ITrackingConsentFeature>();
     var showBanner = !consentFeature?.CanTrack ?? false;
     var cookieString = consentFeature?.CreateConsentCookie();
 }
 
 @if (showBanner)
 {
-    <div id="cookieConsent" class="alert alert-info alert-dismissible fade show" role="alert">
+    <div id="cookieConsent" class="alert alert-light alert-dismissible fade show" role="alert">
         We use cookies to understand how you use our site and to improve your experience. <a asp-area="" asp-controller="Home" asp-action="Privacy">Learn More</a>.
         <button type="button" class="accept-policy close" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
             <span aria-hidden="true">Accept</span>
@@ -17,8 +17,10 @@
     <script>
         (function () {
             var button = document.querySelector("#cookieConsent button[data-cookie-string]");
-            button.addEventListener("click", function () {
+            button.addEventListener("click", function (event) {
                 document.cookie = button.dataset.cookieString;
+                var cookieContainer = document.querySelector("#cookieConsent");
+                cookieContainer.remove();
             }, false);
         })();
     </script>
