--- a/Web/Restaurant.Web/Views/Shared/_HeroPartial.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_HeroPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿<div class="container-xxl py-1 bg-dark hero-header mb-5">
     <div class="container text-center my-5 pt-5 pb-4">
+        <partial name="_CookieConsentPartial" />
         <p class="display-3 section-title text-white mb-3 animated slideInDown">@this.ViewData["Title"]</p>
     </div>
 </div>
