--- a/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -7,9 +7,10 @@
 
 <h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" model="Model.StatusMessage" />
+<img class="img-fluid" src="@($"~{Model.ImageUrl ?? "/images/default.png"}")" style="width: 200px; height: 200px" asp-append-version="true" />
 <div class="row">
     <div class="col-md-6">
-        <form id="profile-form" method="post">
+        <form id="profile-form" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Input.UserName"></label>
@@ -30,6 +31,11 @@
                 <label asp-for="Input.LastName"></label>
                 <input asp-for="Input.LastName" class="form-control" />
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Image"></label>
+                <input asp-for="Input.Image" class="form-control mb-3" />
+                <span asp-validation-for="Input.Image" class="text-danger"></span>
             </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
