--- a/Web/Restaurant.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/Restaurant.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.LastName"></label>
-                <input asp-for="Input.LastName" class="form-control" />
+                <input asp-for="Input.LastName" class="form-control mb-3" />
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
