--- a/Web/Restaurant.Web/Views/Home/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Index.cshtml
@@ -85,7 +85,7 @@
                     <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                     <p>@review.Summary</p>
                     <div class="d-flex align-items-center">
-                        <img class="img-fluid flex-shrink-0 rounded-circle" src="~/images/testimonial-3.jpg" style="width: 50px; height: 50px;" asp-append-version="true">
+                        <img class="img-fluid flex-shrink-0 rounded-circle" src="@review.ImageUrl" style="width: 50px; height: 50px;" asp-append-version="true">
                         <div class="ps-3">
                             <h5 class="mb-1">@review.FullName</h5>
 
