--- a/Web/Restaurant.Web/Views/Review/AllReviews.cshtml
+++ b/Web/Restaurant.Web/Views/Review/AllReviews.cshtml
@@ -40,7 +40,7 @@
             </div>
             <div class="row g-0">
                 <div class="col-md-6">
-                    <img class="profile-pic" src="~/images/testimonial-3.jpg" asp-append-version="true">
+                    <img class="profile-pic" src="@review.ImageUrl" asp-append-version="true">
 
                 </div>
                 <div class="col-md-6">
