Add pagination on All Review page

--- a/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="~/img/favicon.ico" rel="icon" asp-append-version="true">
+    <link href="~/images/favicon.ico" rel="icon" asp-append-version="true">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" asp-append-version="true">
