--- a/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
@@ -8,71 +8,73 @@
 <partial name="_HeroPartial" />
 
 <div class="row g-4">
-    <!-- To do: Improve UI - add partial view for actual reservation + list of reservations on left/right. -->
     @foreach (var reservation in Model.Reservations)
     {
-        <div class="col-md-6">
-            <table class="table table-borderless">
-                <tr class="bg-primary">
-                    <td>
-                        <div align="left"> <span class="text-white fs-2 font-weight-bold">Reservation number</span> </div>
-                        <i class="fa fa-person"></i>
-                    </td>
-                    <td>
-                        <div align="right"> <span class="text-white fs-2 font-weight-bold">@reservation.ReservationNumber</span> </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div align="left"> <span class="text-muted fs-3"><i class="fas fa-calendar-alt fs-3"></i> Reservation date</span> </div>
-                    </td>
-                    <td>
-                        <div align="right"> <span class="text-muted fs-3">@reservation.ReservationDate</span> </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div align="left"> <span class="text-muted fs-3"><i class="fas fa-hashtag fs-3"></i> Table №</span> </div>
-                    </td>
-                    <td>
-                        <div align="right"> <span class="text-muted fs-3">@reservation.TableId</span> </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div align="left"> <span class="text-muted fs-3"><i class="fas fa-users"></i> Table for</span> </div>
+        <div class="card offset-xl-1 col-md-10">
+            <div class="row d-flex">
+                <div class="d-flex flex-column">
+                    <table class="table table-borderless">
+                        <tr class="bg-primary">
+                            <td>
+                                <div align="left"> <span class="text-white fs-2 font-weight-bold">Reservation number</span> </div>
+                            </td>
+                            <td>
+                                <div align="right"> <span class="text-white fs-2 font-weight-bold">@reservation.ReservationNumber</span> </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div align="left"> <span class="text-muted fs-3"><i class="fas fa-calendar-alt fs-3"></i> Reservation date</span> </div>
+                            </td>
+                            <td>
+                                <div align="right"> <span class="text-muted fs-3">@reservation.ReservationDate</span> </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div align="left"> <span class="text-muted fs-3"><i class="fas fa-hashtag fs-3"></i> Table №</span> </div>
+                            </td>
+                            <td>
+                                <div align="right"> <span class="text-muted fs-3">@reservation.TableId</span> </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div align="left"> <span class="text-muted fs-3"><i class="fas fa-users"></i> Table for</span> </div>
 
-                    </td>
-                    <td>
-                        <div align="right"> <span class="text-muted fs-3">@($"{reservation.NumberOfPeople} people")</span> </div>
-                    </td>
-                </tr>
+                            </td>
+                            <td>
+                                <div align="right"> <span class="text-muted fs-3">@($"{reservation.NumberOfPeople} people")</span> </div>
+                            </td>
+                        </tr>
 
-                <tr class="border-top border-bottom border-secondary">
-                    <td>
-                        <div align="left"> <span class="font-weight-bold"><i class="fas fa-user"></i> Name</span> </div>
-                    </td>
-                    <td>
-                        <div align="right"> <span class="font-weight-bold">@reservation.Fullname</span> </div>
-                    </td>
-                </tr>
-                <tr class="border-top border-bottom border-secondary">
-                    <td>
-                        <div align="left"> <span class="font-weight-bold"><i class="fas fa-envelope"></i> Email</span> </div>
-                    </td>
-                    <td>
-                        <div align="right"> <span class="font-weight-bold">@reservation.Email</span> </div>
-                    </td>
-                </tr>
-                <tr class="border-top border-bottom border-primary">
-                    <td>
-                        <div align="left"> <span class="font-weight-bold"><i class="fas fa-phone-square"></i> Phone number</span> </div>
-                    </td>
-                    <td>
-                        <div align="right"> <span class="font-weight-bold">@reservation.PhoneNumber</span> </div>
-                    </td>
-                </tr>
-            </table>
+                        <tr class="border-top border-bottom border-secondary">
+                            <td>
+                                <div align="left"> <span class="font-weight-bold"><i class="fas fa-user"></i> Name</span> </div>
+                            </td>
+                            <td>
+                                <div align="right"> <span class="font-weight-bold">@reservation.Fullname</span> </div>
+                            </td>
+                        </tr>
+                        <tr class="border-top border-bottom border-secondary">
+                            <td>
+                                <div align="left"> <span class="font-weight-bold"><i class="fas fa-envelope"></i> Email</span> </div>
+                            </td>
+                            <td>
+                                <div align="right"> <span class="font-weight-bold">@reservation.Email</span> </div>
+                            </td>
+                        </tr>
+                        <tr class="border-top border-bottom border-primary">
+                            <td>
+                                <div align="left"> <span class="font-weight-bold"><i class="fas fa-phone-square"></i> Phone number</span> </div>
+                            </td>
+                            <td>
+                                <div align="right"> <span class="font-weight-bold">@reservation.PhoneNumber</span> </div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </div>
     }
 </div>
