--- a/Web/Restaurant.Web/Views/Review/All.cshtml
+++ b/Web/Restaurant.Web/Views/Review/All.cshtml
@@ -10,7 +10,7 @@
 
 <!-- To do: Improve UI - add bootstrap card class. -->
 
-<div class="row g-4">
+<div class="row g-4 mb-3">
     <div class="text-center">
         <h5 class="section-title ff-secondary text-center text-primary fw-normal">Testimonial</h5>
         <h1 class="mb-5">Customer feedback</h1>
@@ -18,7 +18,7 @@
 
     @foreach (var review in Model.Reviews)
     {
-        <div class="card offset-1 col-md-10">
+        <div class="card offset-xl-1 col-md-10">
             <div class="row d-flex">
                 <div class="d-flex flex-column">
                     <h3 class="mt-2 mb-3">@review.FullName</h3>
@@ -40,13 +40,14 @@
             </div>
             <div class="row g-0">
                 <div class="col-md-6">
-                    <img class="profile-pic" src="@review.ImageUrl" asp-append-version="true">
-
+                    <img class="profile-pic " src="@review.ImageUrl" asp-append-version="true">
                 </div>
                 <div class="col-md-6">
-                    <p class="text-muted fw-bold pt-5 pt-sm-3 offset-10">@review.CreatedOn.ToLocalTime()</p>
+                    <p class="text-muted fw-bold pt-5 pt-sm-5 offset-xl-10">@review.CreatedOn.ToLocalTime()</p>
                 </div>
             </div>
         </div>
     }
 </div>
+
+<partial name="_PagingPartial" model="@Model" />
