--- a/Web/Restaurant.Web/Views/Reservation/Success.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/Success.cshtml
@@ -31,7 +31,7 @@
                     <div align="left"> <span class="text-muted fs-3"><i class="fas fa-calendar-alt fs-3"></i> Reservation date</span> </div>
                 </td>
                 <td>
-                    <div align="right"> <span class="text-muted fs-3">@Model.ReservationDate</span> </div>
+                    <div align="right"> <span class="text-muted fs-3">@Model.ReservationDate.ToLocalTime()</span> </div>
                 </td>
             </tr>
             <tr>
