--- a/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
@@ -27,7 +27,7 @@
                                 <div align="left"> <span class="text-muted fs-3"><i class="fas fa-calendar-alt fs-3"></i> Reservation date</span> </div>
                             </td>
                             <td>
-                                <div align="right"> <span class="text-muted fs-3">@reservation.ReservationDate</span> </div>
+                                <div align="right"> <span class="text-muted fs-3">@reservation.ReservationDate.ToLocalTime()</span> </div>
                             </td>
                         </tr>
                         <tr>
