--- a/Web/Restaurant.Web/Views/Address/AllAddresses.cshtml
+++ b/Web/Restaurant.Web/Views/Address/AllAddresses.cshtml
@@ -6,92 +6,41 @@
 }
 
 <partial name="_HeroPartial" />
+<div class="bg-white">
 
-<hr />
-<div class="row g-3">
-    <div class="col-md-3 text-center offset-xl-1">
-        <span>Your addresses</span>
-        <ul class="nav nav-pills flex-column" id="addressNames">
-            @if (Model is not null)
-            {
-
-                @foreach (var addressName in Model.AddressNames)
+    <hr style="color: black; height:3px; opacity:100; margin-bottom:30px;" />
+    <div class="row g-3">
+        <div class="col-md-3 text-center offset-xl-1">
+            <h3>Your addresses</h3>
+            <ul class="nav nav-pills flex-column" id="addressNames">
+                @if (Model is not null)
                 {
-                    <li class="nav-item text-center"><a class="nav-link @if (Model.Name == addressName) { <text>active</text> }" asp-area="" asp-controller="Address" asp-action="All" asp-route-id="@addressName">@addressName</a></li>
+                    @foreach (var addressName in Model.AddressNames)
+                    {
+                        <li class="nav-item text-center"><a class="nav-link text-body @if (Model.Name == addressName) { <text>active</text> }" asp-area="" asp-controller="Address" asp-action="All" asp-route-id="@addressName">@addressName</a></li>
+                    }
                 }
+            </ul>
+            <a class="btn btn-primary mt-xl-3 col-xl-12 text-white" asp-controller="Address" asp-action="Add"><i class="fa-solid fa-plus"></i> Add a new address</a>
+        </div>
+        <div class="col-md-6 offset-xl-1 ">
+            @if (Model is null)
+            {
+                <h1>You don't have any addresses yet!</h1>
             }
-
-        </ul>
+            else
+            {
+                <form class="row g-3" method="post">
+                    <partial name="_AddressViewPartial" model="Model" />
+                    <button type="submit" id="editAddressButton" class="btn btn-primary m-2"><i class="fa-solid fa-check"></i> Save changes</button>
+                    <button class="btn btn-primary m-2" asp-action="Delete"><i class="fa-solid fa-trash"></i> Delete</button>
+                </form>
+            }
+        </div>
     </div>
-    <div class="col-md-6 offset-xl-1">
-        <form class="row g-3" method="post" id="formData">
-            <div class="col-md-12 ">
-                <label asp-for="@Model.Name">Name</label>
-                <input asp-for="@Model.Name" class="form-control">
-                <span asp-validation-for="@Model.Name"></span>
-            </div>
-            <div class="col-md-6">
-                <label asp-for="@Model.Street">Street</label>
-                <input asp-for="@Model.Street" class="form-control">
-                <span asp-validation-for="@Model.Street"></span>
-            </div>
-            <div class="col-md-6">
-                <label asp-for="@Model.District">District</label>
-                <input asp-for="@Model.District" class="form-control">
-                <span asp-validation-for="@Model.District"></span>
-            </div>
-            <div class="col-md-4">
-                <label asp-for="@Model.City">City</label>
-                <input asp-for="@Model.City" class="form-control">
-                <span asp-validation-for="@Model.City"></span>
-            </div>
-            <div class="col-md-4">
-                <label asp-for="@Model.Country">Country</label>
-                <input asp-for="@Model.Country" class="form-control" value="Bulgaria">
-                <span asp-validation-for="@Model.Country"></span>
-            </div>
 
-            <div class="col-md-4">
-                <label asp-for="@Model.PostCode">Zip</label>
-                <input asp-for="@Model.PostCode" class="form-control">
-                <span asp-validation-for="@Model.PostCode"></span>
-            </div>
-            <div class="col-12">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" asp-for="IsPrimaryAddress">
-                    <label class="form-check-label text-left" for="gridCheck">
-                        Set as primary address
-                    </label>
-                </div>
-            </div>
-
-            <button type="submit" id="editAddressButton" class="btn btn-primary m-2 col-md-5">Save changes</button>
-            <button class="btn btn-primary m-2 col-md-4" id="newAddressButton" onclick="newAddressForm()">New address</button>
-            <button class="btn btn-primary m-2 col-md-2" asp-action="Delete">Delete</button>
-
-        </form>
-
-    </div>
+    <hr style="color: black; height:3px; opacity:100" />
 </div>
 
-<hr />
 
-<script>
-    var clicked = false;
-
-    function newAddressForm() {
-        if (clicked) {
-        }
-        else {
-            $(".nav-link").removeClass("active");
-            $('#addressNames').prepend('<li class="nav-item text-center"><a class="nav-link active">New address...</a></li>');
-            $(':input').not(':button, :submit, :reset, :hidden, :checkbox, :radio').val('');
-            $(':checkbox, :radio').prop('checked', false);
-            $('#editAddressButton').hide();
-            $('#newAddressButton').html('Save');
-            clicked = true;
-            $('#formData').get(0).setAttribute('action', '/Address/Add');
-        }
-    };
-</script>
 
