Added border to review and reservation

--- a/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
@@ -10,7 +10,7 @@
 <div class="row g-4">
     @foreach (var reservation in Model.Reservations)
     {
-        <div class="card offset-xl-1 col-md-10">
+        <div class="card offset-xl-1 col-md-10 border-3 border-dark">
             <div class="row d-flex">
                 <div class="d-flex flex-column">
                     <table class="table table-borderless">
