--- a/Web/Restaurant.Web/Views/Review/AllReviews.cshtml
+++ b/Web/Restaurant.Web/Views/Review/AllReviews.cshtml
@@ -18,7 +18,7 @@
 
     @foreach (var review in Model.Reviews)
     {
-        <div class="card offset-xl-1 col-md-10">
+        <div class="card offset-xl-1 col-md-10 border-3 border-dark">
             <div class="row d-flex">
                 <div class="d-flex flex-column">
                     <h3 class="mt-2 mb-3">@review.FullName</h3>
