--- a/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
@@ -13,7 +13,7 @@
         <div class="card offset-xl-1 col-md-10 border-3 border-dark">
             <div class="row d-flex">
                 <div class="d-flex flex-column">
-                    <table class="table table-borderless">
+                    <table class="table table-borderless table-hover">
                         <tr class="bg-primary">
                             <td>
                                 <div align="left"> <span class="text-white fs-2 font-weight-bold">Reservation number</span> </div>
