--- a/Web/Restaurant.Web/Views/Reservation/Book.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/Book.cshtml
@@ -78,7 +78,7 @@
                         </div>
                         <div class="col-12">
                             <div class="form-floating">
-                                <textarea class="form-control" asp-for="SpecialRequest" placeholder="Special Request" style="height: 100px"></textarea>
+                                <textarea class="form-control" asp-for="SpecialRequest" placeholder="Special Request" maxlength="201" style="height: 100px"></textarea>
                                 <label asp-for="SpecialRequest">Special Request</label>
                                 <span asp-validation-for="SpecialRequest" class="text-white"></span>
 
