--- a/Web/Restaurant.Web/Views/Reservation/Success.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/Success.cshtml
@@ -17,7 +17,7 @@
 <div class="row d-flex justify-content-center">
     <h3 align="center" class="m-2" style="color:#4BB543;font-weight: bolder;"><i class="fa fa-check-square"></i> Your reservation has been successful!</h3>
     <div class="col-md-6">
-        <table class="table table-borderless">
+        <table class="table table-borderless table-hover">
             <tr class="bg-primary">
                 <td>
                     <div align="left"> <span class="text-white fs-2 font-weight-bold">Reservation number</span> </div>
