--- a/Web/Restaurant.Web/Views/Review/AddReview.cshtml
+++ b/Web/Restaurant.Web/Views/Review/AddReview.cshtml
@@ -29,12 +29,12 @@
                 </div>
             </div>
             <div class="form-floating mb-3">
-                <input class="form-control col-xl-12" asp-for="Summary" placeholder="Give us a short summary of your experience.">
+                <input class="form-control col-xl-12" asp-for="Summary" maxlength="37" placeholder="Give us a short summary of your experience.">
                 <label asp-for="Summary">Give us a short summary of your experience.</label>
                 <span asp-validation-for="Summary" class="text-white"></span>
             </div>
             <div class="form-floating mb-3">
-                <textarea class="form-control col-xl-12" asp-for="Description" placeholder="Share your feedback, recommendations, etc." style="height: 150px"></textarea>
+                <textarea class="form-control col-xl-12" asp-for="Description" maxlength="401" placeholder="Share your feedback, recommendations, etc." style="height: 150px"></textarea>
                 <label asp-for="Description">Share your experience, recommendations, etc.</label>
                 <span asp-validation-for="Description" class="text-white"></span>
             </div>
