--- a/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
 ﻿@inject SignInManager<ApplicationUser> SignInManager
+@using Restaurant.Common
 
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
@@ -19,4 +20,10 @@
     <li><a class="nav-item nav-link" asp-area="" asp-controller="Reservation" asp-action="All">Reservations</a></li>
     <li><a class="nav-item nav-link" asp-area="" asp-controller="Address" asp-action="All">Addresses</a></li>
     <li><a class="nav-item nav-link" asp-area="" asp-controller="Order" asp-action="All">Orders</a></li>
+    @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
+    {
+    <li class="nav-item">
+        <a class="nav-link nav-link" asp-area="Administration" asp-controller="Meals" asp-action="All" asp-route-id="1">Manage meals</a>
+    </li>
+    }
 </ul>
