--- a/Web/Restaurant.Web/Views/Address/AllAddresses.cshtml
+++ b/Web/Restaurant.Web/Views/Address/AllAddresses.cshtml
@@ -30,10 +30,10 @@
             }
             else
             {
-                <form class="row g-3" method="post">
+                <form class="row g-3" method="post" id="addressForm" asp-action="Delete">
                     <partial name="_AddressViewPartial" model="Model" />
-                    <button type="submit" id="editAddressButton" class="btn btn-primary m-2"><i class="fa-solid fa-check"></i> Save changes</button>
-                    <button class="btn btn-primary m-2" asp-action="Delete"><i class="fa-solid fa-trash"></i> Delete</button>
+                    <button type="submit" class="btn btn-primary m-2" asp-action="AllAddresses"><i class="fa-solid fa-check"></i> Save changes</button>
+                    <button type="button" class="btn btn-danger m-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i class="fa-solid fa-trash"></i> Delete</button>
                 </form>
             }
         </div>
@@ -41,6 +41,23 @@
 
     <hr style="color: black; height:3px; opacity:100" />
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel">Are you sure you want to delete this address?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" asp-action="Delete" class="btn btn-danger" onclick="addressForm.submit()">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 
