Added dashboard view + small UI changes

--- a/Web/Restaurant.Web/Areas/Administration/Views/Meal/Delete.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Meal/Delete.cshtml
@@ -65,8 +65,8 @@
         <input type="hidden" asp-for="Id" />
 
     </form>
-    <button value="Delete" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Delete</button> |
-    <a class="btn btn-secondary" asp-action="Index" asp-route-id="@(this.TempData["RouteId"] ?? 1)">Back to List</a>
+    <button value="Delete" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Delete</button> |
+    <a class="btn btn-primary" asp-action="Index" asp-route-id="@(this.TempData["RouteId"] ?? 1)">Back to List</a>
 </div>
 
 <!-- Modal -->
