--- a/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -22,8 +22,8 @@
     <li><a class="nav-item nav-link" asp-area="" asp-controller="Order" asp-action="All">Orders</a></li>
     @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
     {
-    <li class="nav-item">
-        <a class="nav-link nav-link" asp-area="Administration" asp-controller="Meals" asp-action="All" asp-route-id="1">Manage meals</a>
-    </li>
+        <li class="nav-item">
+            <a class="nav-link nav-link" asp-area="Administration" asp-controller="Dashboard" asp-action="Index">Admin dashboard</a>
+        </li>
     }
 </ul>
