Added administration for Reviews

--- a/Web/Restaurant.Web/Areas/Administration/Views/Meal/Edit.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Meal/Edit.cshtml
@@ -11,7 +11,7 @@
 
 <div class="wow fadeInUp" data-wow-delay="0.2s">
     <div class="offset-md-5">
-        <img class="img-fluid" src=@($"{Model.ImageUrl}") alt="" asp-append-version="true">
+        <img class="img-fluid" src=@Model.ImageUrl alt="" asp-append-version="true">
     </div>
     <form method="post" class="col-md-6 offset-md-3"
           enctype="multipart/form-data">
