--- a/Web/Restaurant.Web/Areas/Administration/Views/Meal/Index.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Meal/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <partial name="_HeroPartial" />
-<table class="table table-hover table-bordered border-primary">
+<table class="table table-hover table-bordered">
     <thead class="table-dark">
         <tr class="text-center">
             <th>
@@ -39,12 +39,12 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="table-light">
         @foreach (var meal in Model.Meals)
         {
             <tr>
                 <td>
-                    <img class="flex-shrink-0 img-fluid" src=@($"{meal.ImageUrl}") alt="" asp-append-version="true">
+                    <img class="flex-shrink-0 img-fluid" src=@meal.ImageUrl alt="" asp-append-version="true">
                 </td>
                 <td>
                     @meal.Name
