UI changes to Admin Reviewcontroller Index view

--- a/Web/Restaurant.Web/Areas/Administration/Views/Meal/Index.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Meal/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <partial name="_HeroPartial" />
-<table class="table table-hover table-bordered">
+<table class="table table-hover table-bordered table-responsive">
     <thead class="table-dark">
         <tr class="text-center">
             <th>
