Added FA icons to buttons + moved Modal to partial view

--- a/Web/Restaurant.Web/Areas/Administration/Views/Reservation/Index.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Reservation/Index.cshtml
@@ -98,8 +98,8 @@
                     @reservation.ModifiedOn
                 </td>
                 <td>
-                    <a class="btn btn-primary mt-1" asp-action="Details" asp-route-id="@reservation.Id">Details</a>
-                    <a class="btn btn-primary mt-1" asp-action="Edit" asp-route-id="@reservation.Id">Edit</a>
+                    <a class="btn btn-primary mt-1" asp-action="Details" asp-route-id="@reservation.Id"><i class="fa-solid fa-circle-info"></i>Info</a>
+                    <a class="btn btn-primary mt-1" asp-action="Edit" asp-route-id="@reservation.Id"><i class="fa-solid fa-pen-to-square"></i>Edit</a>
                 </td>
 
             </tr>
