--- a/Web/Restaurant.Web/Areas/Administration/Views/Review/Index.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Review/Index.cshtml
@@ -79,7 +79,7 @@
                     @review.ModifiedOn
                 </td>
                 <td>
-                    <a class="btn btn-primary mt-1" asp-action="Details" asp-route-id="@review.Id">Details</a>
+                    <a class="btn btn-primary mt-1" asp-action="Details" asp-route-id="@review.Id"><i class="fa-solid fa-circle-info"></i> Info</a>
                 </td>
 
             </tr>
