--- a/Web/Restaurant.Web/Areas/Administration/Views/Meal/Details.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Meal/Details.cshtml
@@ -74,6 +74,6 @@
             </dd>
         </dl>
     </div>
-    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a class="btn btn-primary" asp-action="Index" asp-route-id="@(this.TempData["RouteId"] ?? 1)">Back to List</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id"> <i class="fa-solid fa-pen-to-square"></i> Edit</a> |
+    <a class="btn btn-primary" asp-action="Index" asp-route-id="@(this.TempData["RouteId"] ?? 1)"> <i class="fa-solid fa-bars"></i> Back to List</a>
 </div>
