--- a/Web/Restaurant.Web/Areas/Administration/Views/Meal/Index.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Meal/Index.cshtml
@@ -25,7 +25,7 @@
                 Category
             </th>
             <th>
-                IsDelete
+                IsDeleted
             </th>
             <th>
                 DeletedOn
@@ -71,8 +71,8 @@
                     @meal.ModifiedOn
                 </td>
                 <td>
-                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@meal.Id">Edit</a>
-                    <a class="btn btn-primary mt-1" asp-action="Details" asp-route-id="@meal.Id">Details</a>
+                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@meal.Id"><i class="fa-solid fa-pen-to-square"></i> Edit</a>
+                    <a class="btn btn-primary mt-1" asp-action="Details" asp-route-id="@meal.Id"><i class="fa-solid fa-circle-info"></i> Info</a>
 
                 </td>
             </tr>
@@ -80,7 +80,7 @@
     </tbody>
 
 </table>
-<a class="btn btn-primary" asp-action="Create">Create New</a>
+<a class="btn btn-primary" asp-action="Create"><i class="fa-solid fa-circle-plus"></i> Create New</a>
 
 <partial name="_PagingPartial" model="@Model" />
 
