--- a/Web/Restaurant.Web/Areas/Administration/Views/Reservation/Details.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Reservation/Details.cshtml
@@ -85,8 +85,8 @@
             </dd>
         </dl>
     </div>
-    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a class="btn btn-primary" asp-action="Index" asp-route-id="@(this.TempData["RouteId"] ?? 1)">Back to List</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id"><i class="fa-solid fa-pen-to-square"></i> Edit</a> |
+    <a class="btn btn-primary" asp-action="Index" asp-route-id="@(this.TempData["RouteId"] ?? 1)"><i class="fa-solid fa-bars"></i> Back to List</a>
 </div>
 
 
