--- a/Web/Restaurant.Web/Areas/Administration/Views/Reservation/Edit.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Reservation/Edit.cshtml
@@ -55,8 +55,8 @@
             <input hidden asp-for="Id" />
         </div>
         <div class="col-12">
-            <button class="btn btn-primary w-100 col-md-12 mt-3" type="submit">Save changes</button>
-            <a class="btn btn-primary w-100 col-md-12 mt-3" asp-action="Index" asp-route-id="@(this.TempData["RouteId"] ?? 1)">Back to List</a>
+            <button class="btn btn-primary w-100 col-md-12 mt-3" type="submit"><i class="fa-solid fa-check"></i> Save changes</button>
+            <a class="btn btn-primary w-100 col-md-12 mt-3" asp-action="Index" asp-route-id="@(this.TempData["RouteId"] ?? 1)"><i class="fa-solid fa-bars"></i> Back to List</a>
         </div>
     </form>
     <form asp-action="Delete" id="deleteForm">
@@ -65,25 +65,13 @@
     <form asp-action="Restore" asp-route-id="@Model.Id" id="restoreForm">
         <input type="hidden" asp-for="Id" />
     </form>
-    <button class="btn btn-secondary col-md-6 offset-md-3 mt-3" asp-action="Restore" asp-route-id="@Model.Id" onclick="restoreForm.submit()">Restore</button>
-    <button value="Delete" class="btn btn-dark col-md-6 offset-md-3 mt-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Delete</button>
+    <button class="btn btn-secondary col-md-6 offset-md-3 mt-3" asp-action="Restore" asp-route-id="@Model.Id" onclick="restoreForm.submit()"><i class="fa-solid fa-trash-arrow-up"></i> Restore</button>
+    <button value="Delete" class="btn btn-dark col-md-6 offset-md-3 mt-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i class="fa-solid fa-trash-can"></i> Delete</button>
 
 </div>
 
 
 
 <!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Are you sure you want to delete this reservation?</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-danger" onclick="deleteForm.submit()">Delete</button>
-            </div>
-        </div>
-    </div>
-</div>
+<partial name="_ModalPartial" />
+
