--- a/Web/Restaurant.Web/Views/Address/AddAddress.cshtml
+++ b/Web/Restaurant.Web/Views/Address/AddAddress.cshtml
@@ -12,6 +12,8 @@
     <form class="row g-3" method="post">
         <partial name="_AddressViewPartial" model="Model" />
         <button type="submit" id="editAddressButton" class="btn btn-primary m-2"><i class="fa-solid fa-check"></i> Save changes</button>
+        <a class="btn btn-primary m-2" asp-controller="Address" asp-action="All"><i class="fa-solid fa-circle-left"></i> Back</a>
+
     </form>
 </div>
 <hr />
