--- a/Web/Restaurant.Web/Views/Address/AllAddresses.cshtml
+++ b/Web/Restaurant.Web/Views/Address/AllAddresses.cshtml
@@ -17,7 +17,7 @@
                 {
                     @foreach (var addressName in Model.AddressNames)
                     {
-                        <li class="nav-item text-center"><a class="nav-link text-white @if (Model.Name == addressName) { <text>active</text> }" asp-area="" asp-controller="Address" asp-action="All" asp-route-id="@addressName">@addressName</a></li>
+                        <li class="nav-item text-center"><a class="nav-link text-black @if (Model.Name == addressName) { <text>active</text> }" asp-area="" asp-controller="Address" asp-action="All" asp-route-id="@addressName">@addressName</a></li>
                     }
                 }
             </ul>
@@ -30,7 +30,7 @@
             }
             else
             {
-                <form class="row g-3" method="post" id="addressForm" asp-action="Delete">
+                <form class="row g-3" method="post" id="deleteForm" asp-action="Delete">
                     <partial name="_AddressViewPartial" model="Model" />
                     <button type="submit" class="btn btn-primary" asp-action="AllAddresses"><i class="fa-solid fa-check"></i> Save changes</button>
                     <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i class="fa-solid fa-trash"></i> Delete</button>
@@ -43,20 +43,9 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Are you sure you want to delete this address?</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="submit" asp-action="Delete" class="btn btn-danger" onclick="addressForm.submit()">Delete</button>
-            </div>
-        </div>
-    </div>
-</div>
+
+<partial name="_ModalPartial" />
+
 
 
 
