Started work on cart and order functionality
Added order and cart services, Cart and CartItem models.

--- a/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                     <a class="nav-item nav-link" asp-area="" asp-controller="Reservation" asp-action="Book">Book a table</a>
                     <partial name="_LoginPartial" />
                 </div>
-                <a href="" class="btn btn-primary py-2 px-4">Order now</a>
+                <a class="btn btn-primary py-2 px-4" asp-controller="Cart" asp-action="Index"><i class="fa-solid fa-cart-shopping"></i> Your cart</a>
             </div>
 
         </nav>
