--- a/Web/Restaurant.Web/Views/Home/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             <div class="col-lg-6 text-center text-lg-start">
                 <h1 class="display-3 text-white animated slideInLeft">Hungry?<br>You've come to the right place!</h1>
                 <p class="text-white animated slideInLeft mb-4 pb-2">From juicy burgers to mouth-watering pizza - we've got it all. All made using only the freshest ingredients from local markets.</p>
-                <a class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft" asp-controller="Reservation" asp-action="Book">Book A Table</a>
+                <a class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft" asp-controller="Reservation" asp-action="Book"><i class="fa-solid fa-calendar-check"></i> Book A Table</a>
             </div>
             <div class="col-lg-6 text-center text-lg-end overflow-hidden">
                 <img class="img-fluid" src="~/images/hero.png" asp-append-version="true">
