--- a/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
+++ b/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
@@ -36,31 +36,85 @@
             @{i = 1;}
 
             <div class="tab-content">
+                @{var j = 1;}
+
                 @foreach (var category in Model.Categories)
                 {
                     <div id="tab-@i" class="tab-pane fade show p-0">
                         <div class="row g-4">
-                            @foreach (var meal in Model.Meals.Where(m => m.Category.Name == category.Name))
+                            @foreach (var cartItem in Model.CartItems.Where(ci => ci.Meal.Category.Name == category.Name))
                             {
-                                <div class="col-lg-6">
+                                <div class="col-lg-6" id="mealContainer@(j)">
                                     <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src=@($"{meal.ImageUrl}") alt="" asp-append-version="true">
+                                        <img class="flex-shrink-0 img-fluid rounded" src=@($"{cartItem.Meal.ImageUrl}") alt="" asp-append-version="true">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                                <span>@meal.Name</span>
-                                                <span class="text-primary">@meal.Price €</span>
+                                                <span>@cartItem.Meal.Name</span>
+                                                <span class="text-primary">@cartItem.Meal.Price €</span>
                                             </h5>
-                                            <small class="fst-italic">@meal.Description</small>
+                                            <small class="fst-italic mb-2">@cartItem.Meal.Description</small>
+                                            <div class="d-flex align-items-center">
+                                                <div class="input-group" style="max-width: 200px;">
+                                                    <div class="input-group-btn">
+                                                        <button class="btn btn-primary" onclick="RemoveItem('mealContainer@(j)')">
+                                                            <i class="fa fa-minus"></i>
+                                                        </button>
+                                                    </div>
+                                                    <div style="max-width: 50px;">
+                                                        <input type="text" asp-for="@cartItem.Quantity" class="form-control bg-white text-center" value=1>
+                                                        <span asp-validation-for="@cartItem.Quantity"></span>
+                                                    </div>
+                                                    <div class="input-group-btn">
+                                                        <button class="btn btn-primary" onclick="AddItem('mealContainer@(j)')">
+                                                            <i class="fa fa-plus"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                                <button class="btn btn-primary px-3" onclick="AddToCart('mealContainer@(j)')"><i class="fa fa-shopping-cart"></i> Add To Cart</button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
+                                j++;
                             }
                         </div>
                     </div>
-
                     i++;
                 }
             </div>
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+
+    function AddItem(id) {
+
+        var mealContainer = document.getElementById(id);
+        var quantityValue = mealContainer.querySelector('input');
+
+        var quantityValueAsInt = Number.parseInt(quantityValue.getAttribute('value'));
+
+        quantityValueAsInt++;
+        quantityValue.setAttribute('value', quantityValueAsInt);
+        console.log(quantityValueAsInt);
+
+    }
+
+    function RemoveItem(id) {
+
+        var mealContainer = document.getElementById(id);
+        var quantityValue = mealContainer.querySelector('input');
+
+        var quantityValueAsInt = Number.parseInt(quantityValue.getAttribute('value'));
+
+
+
+        if (quantityValueAsInt > 1) {
+
+            quantityValueAsInt--;
+            quantityValue.setAttribute('value', quantityValueAsInt);
+            console.log(quantityValueAsInt);
+        }
+    }
+</script>
